<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green"
    tools:context=".Information" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.

    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_confirm" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/im_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:layout_weight="1"
                android:focusable="false"
                android:paddingTop="10dp"
                android:src="@drawable/custom_icon" />

            <TextView
                android:id="@+id/tv_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_logo"
                android:layout_centerHorizontal="true"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_ip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_green" />

            <EditText
                android:id="@+id/et_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_ip"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hint_ip"
                android:paddingTop="5dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tv_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_below="@+id/et_ip"
                android:layout_centerHorizontal="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/label_port"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_green" />

            <EditText
                android:id="@+id/et_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_port"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hint_port"
                android:inputType="number"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />
        </RelativeLayout>
    </FrameLayout>

</FrameLayout>